name:                servant-prometheus
version:             0.2.0.0
synopsis:            Helpers for using prometheus with servant
description:         Helpers for using prometheus with servant. Each endpoint has its own metrics allowing more detailed monitoring than wai-middleware-prometheus allows
license:             BSD3
license-file:        LICENSE
author:              Alex Mason <axman6@gmail.com>, Anchor Engineering <engineering@lists.anchor.net.au>, Servant Contributors
maintainer:          Alex Mason <axman6@gmail.com>, Jack Kelly <jack.kelly@data61.csiro.au>
category:            System
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
                    README.md

source-repository HEAD
  type: git
  location: https://github.com/axman6/servant-prometheus

library
  exposed-modules:     Servant.Prometheus
  other-modules:       Servant.Prometheus.Class
  hs-source-dirs:      lib
  build-depends:      base                  >= 4.7      && < 4.13
                    , prometheus-client     >= 1.0
                    , servant               >= 0.14     && < 0.16
                    , ekg-core              >= 0.1.1.4  && <0.2
                    , hashable              >= 1.2.7.0  && <1.3
                    , http-types            >= 0.12.2   && <0.13
                    , servant               >= 0.14     && <0.16
                    , text                  >= 1.2.3.0  && <1.3
                    , time                  >= 1.6.0.1  && <1.9
                    , unordered-containers  >= 0.2.9.0  && <0.3
                    , wai                   >= 3.2.0    && <3.3
                    , bytestring

  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  default-language: Haskell2010
  hs-source-dirs: test
  other-modules: Servant.PrometheusSpec
  main-is: Spec.hs
  build-depends:      base == 4.*
                    , aeson
                    , servant-prometheus
                    , servant-server
                    , servant-client
                    , servant
                    , prometheus-client
                    , http-client
                    , text
                    , wai
                    , warp >= 3.2.4 && < 3.3
                    , hspec == 2.*
                    , unordered-containers
                    , transformers

executable bench
  hs-source-dirs: bench
  main-is: Main.hs
  ghc-options: -Wall -threaded -O2
  default-language: Haskell2010
  build-depends:      base == 4.*
                    , aeson
                    , servant-prometheus
                    , servant-server
                    , prometheus-client
                    , text
                    , wai
                    , warp >= 3.2.4 && < 3.3
                    , process
